[package]
name = "pcgbg"
version = "0.1.0"
authors = ["Arthur Eubanks <ayueubanks@gmail.com>"]
edition = "2018"

[dependencies]
approx = "0.3"
euclid = "0.19"
noise = { version = "0.6", default-features = false }
num-traits = "0.2"
rand_derive = "0.5"
structopt = "0.2"
more-asserts = "0.2"
ndarray = "0.12"
noisy_float = "0.1"

[dev-dependencies]
criterion = "0.3"

[dependencies.image]
version = "0.22"
default-features = false
features = ["png_codec"]

[dependencies.rand]
version = "0.7"
features = ["small_rng"]

[[bin]]
name = "pcgbg"
bench = false

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
