[package]
name = "pcgbg"
version = "0.1.0"
authors = ["Arthur Eubanks <ayueubanks@gmail.com>"]
edition = "2018"

[dependencies]
approx = "*"
euclid = "*"
noise = { version = "0.7", default-features = false }
num-traits = "*"
structopt = "*"
more-asserts = "*"
ndarray = "*"
noisy_float = "*"

[dev-dependencies]
criterion = "*"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[dependencies.rand]
version = "*"
features = ["small_rng"]

[[bin]]
name = "pcgbg"
bench = false

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "thin"
