[package]
name = "pcgbg"
version = "0.1.0"
authors = ["Arthur Eubanks <ayueubanks@gmail.com>"]
edition = "2018"

[dependencies]
euclid = "*"
noise = { version = "0.7", default-features = false }
num-traits = "*"
structopt = "*"
more-asserts = "*"
ndarray = "*"
noisy_float = "*"
num-complex = "*"

[dev-dependencies]
criterion = "*"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[dependencies.rand]
version = "*"
features = ["small_rng"]

[dependencies.approx]
version = "*"
features = ["num-complex"]

[[bin]]
name = "pcgbg"
bench = false

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "thin"
